--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,36 +1,22 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
-        <members>*</members>
-        <name>ApexClass</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTestSuite</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexTrigger</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>LightningComponentBundle</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>StaticResource</name>
-    </types>
-    <version>62.0</version>
+	<types>
+		<members>Administrative Assistant</members>
+		<members>Child Welfare Manager</members>
+		<members>Community Engagement Manager</members>
+		<members>Data Analyst</members>
+		<members>Donor Relations Manager</members>
+		<members>Executive Director</members>
+		<members>Family Support Coordinator</members>
+		<members>Finance Manager</members>
+		<members>Grant Writer</members>
+		<members>IT Support Specialist</members>
+		<members>Mental Health Specialist</members>
+		<members>Program Director</members>
+		<members>Social Worker</members>
+		<members>Training and Development Manager</members>
+		<members>Volunteer Coordinator</members>
+		<name>Profile</name>
+	</types>
+	<version>60.0</version>
 </Package>
