created incident report"objects

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -16,6 +16,10 @@
 		<name>CustomField</name>
 	</types>
 	<types>
+		<members>Incident_Report__c</members>
+		<name>CustomObject</name>
+	</types>
+	<types>
 		<members>Administrative_Support</members>
 		<members>Child_Welfare_Specialist</members>
 		<members>Community_Engagement_Officer</members>
