--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -43,6 +43,10 @@
 		<members>Case.General_Incident_Report</members>
 		<members>Case.Neglect_Report</members>
 		<members>Case.Safety_Concern_Report</members>
+		<members>Incident_Report__c.Abuse_Incident</members>
+		<members>Incident_Report__c.General_Incident</members>
+		<members>Incident_Report__c.Neglect_Incident</members>
+		<members>Incident_Report__c.Safety_Concern</members>
 		<name>RecordType</name>
 	</types>
 	<version>60.0</version>
