created Support Program Object

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -18,6 +18,7 @@
 	<types>
 		<members>Incident_Report__c</members>
 		<members>Service_Provider__c</members>
+		<members>Support_Program__c</members>
 		<name>CustomObject</name>
 	</types>
 	<types>
