--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -16,6 +16,7 @@
 		<name>CustomField</name>
 	</types>
 	<types>
+		<members>Crisis_Intervention__c</members>
 		<members>Feedback__c</members>
 		<members>Incident_Report__c</members>
 		<members>Service_Provider__c</members>
