created visit log object

--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -27,6 +27,7 @@
 		<members>Service_Provider__c</members>
 		<members>Support_Program__c</members>
 		<members>Training_Session__c</members>
+		<members>Visit_Log__c</members>
 		<name>CustomObject</name>
 	</types>
 	<types>
